src/negative_test_cases/Testcases/invalid_boolean_expression_2.stl
void main()
{

boolean a;
boolean b;
boolean c;
a=true;
b=true;
c=a or b and a * a + b;
}
